# sm4file

./: 404.html  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml  test.yml
api-dev/cursor/: index.html
api-dev/sm4_file_all/: index.html
api-dev/sm4_object_types/: index.html
api-user/: index.html
docs/: api-dev.md  api-user.md  examples.md  index.md
docs/api-dev/: cursor.md  sm4_file_all.md  sm4_object_types.md
examples/: index.html
search/: search_index.json
sm4file/: __init__.py  cursor.py  page_types.py  sm4_file.py  sm4_object_types.py  sm4file.py
tests/: test_sm4file.py
tests/test_files/: test_iv.SM4
