[tool.poetry]
name = "sm4file"
version = "0.1.0"
description = "Python package to read .sm4 files"
authors = ["matkrin <matkrin@protonmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
preview = true

[tool.mypy]
show_error_codes = true
